--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
       </div>
 
       <div class="price">
-        <div class="price-eth"></div>
-        <div class="price-time"></div>
+        <div class="price-img">
+          <img src="./images/icon-ethereum.svg" alt="icon-ethereum">
+        </div>
+        <div class="price-eth">
+          <p>0.041 ETH</p>
+        </div>
+        <div class="price-clock">
+          <img src="./images/icon-clock.svg" alt="icon-clock">
+        </div>
+        <div class="price-time">
+          <p>3 days left</p>
+        </div>
       </div>
 
       <div class="line"></div>
