--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
 
       <div class="line"></div>
 
-      <div class="avatar"></div>
+      <div class="avatar">
+        <div class="avatar-img">
+          <img src="./images/image-avatar.png" alt="avatar">
+        </div>
+        <div class="avatar-text">
+          <p>Creation of Jules Wyvern</p>
+        </div>
+      </div>
 
     </div>
 </body>
