--- a/index.html
+++ b/index.html
@@ -25,29 +25,27 @@
       <div class="price">
         <div class="price-img">
           <img src="./images/icon-ethereum.svg" alt="icon-ethereum">
-        </div>
-        <div class="price-eth">
+
           <p>0.041 ETH</p>
         </div>
+
         <div class="price-clock">
           <img src="./images/icon-clock.svg" alt="icon-clock">
-        </div>
-        <div class="price-time">
+        
           <p>3 days left</p>
         </div>
       </div>
 
-      <div class="line"></div>
+      <hr>
 
       <div class="avatar">
         <div class="avatar-img">
           <img src="./images/image-avatar.png" alt="avatar">
-        </div>
-        <div class="avatar-text">
-          <p>Creation of Jules Wyvern</p>
+        
+          <p>Creation of <a href="#">Jules Wyvern</a></p>
         </div>
       </div>
 
-    </div>
+    </hr>
 </body>
 </html>
